--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -52,8 +52,10 @@
     - name: Validate ps output
       assert:
         that: ps2.stdout
-      # FIXME: nok on focal even if service status is ok
-      when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version|int == 18
+      when: >
+        not (ansible_virtualization_type is defined and
+              (ansible_virtualization_type == "docker" or ansible_virtualization_type == "lxc")
+            )
     - name: Ensure ports are listening
       wait_for:
         host: "{{ item.h }}"
