--- a/.github/workflows/default-HEAD.yml
+++ b/.github/workflows/default-HEAD.yml
@@ -20,21 +20,21 @@ jobs:
           - distribution: fedora
             version: 33
             version2: 33
-            suite: default
+            suite: default-HEAD
             experimental: true
           - distribution: ubuntu
             version: '20.04'
             version2: 2004
-            suite: default
+            suite: default-HEAD
             experimental: false
           - distribution: ubuntu
             version: '18.04'
             version2: 1804
-            suite: default
+            suite: default-HEAD
             experimental: true
     env:
       ANSIBLE_CALLBACK_WHITELIST: profile_tasks
-      ANSIBLE_EXTRA_FLAGS: "-e fact_nginx_shim=true -e fact_version=HEAD"
+      # ANSIBLE_EXTRA_FLAGS: "-e fact_nginx_shim=true -e fact_version=HEAD"
 
     steps:
       - uses: actions/checkout@v2
