--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for juju4.fact
 
-fact_repo: https://github.com/fkie-cad/FACT_core.git
+fact_repo: https://github.com/juju4/FACT_core.git
 fact_version: 3.2
 fact_user: _fact
 fact_home: /var/_fact
