--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 # defaults file for juju4.fact
 
 fact_repo: https://github.com/juju4/FACT_core.git
-fact_version: 3.2
+fact_version: devel
 fact_user: _fact
 fact_home: /var/_fact
 fact_root: /var/_fact/FACT_core
