workflows default*: increase lxc storage

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -104,7 +104,7 @@ jobs:
           sudo lxc network list
           # configure storage pool
           sudo lxc storage list
-          sudo lxc storage create pool1 zfs size=25GB
+          sudo lxc storage create pool1 zfs size=45GB
           sudo lxc storage list
           sudo zpool list
           sudo lxc profile device add default root disk path=/ pool=pool1
@@ -159,6 +159,7 @@ jobs:
           sudo kitchen exec ${{ matrix.suite }}-${{ matrix.distribution }}-${{ matrix.version2 }} -c 'curl -v https://nvd.nist.gov/feeds/json/cve/1.1/nvdcve-1.1-2010.json.zip' || true
           sudo kitchen exec ${{ matrix.suite }}-${{ matrix.distribution }}-${{ matrix.version2 }} -c 'ls -lA /tmp/kitchen/' || true
           sudo kitchen exec ${{ matrix.suite }}-${{ matrix.distribution }}-${{ matrix.version2 }} -c 'cat /tmp/kitchen/hosts' || true
+          sudo kitchen exec ${{ matrix.suite }}-${{ matrix.distribution }}-${{ matrix.version2 }} -c 'df -h' || true
           df -h
           sudo lxc storage list
           sudo zpool list
