fedora: add nginx earlier for setfacl

--- a/vars/Fedora.yml
+++ b/vars/Fedora.yml
@@ -24,6 +24,7 @@ fact_pkgs:
   # Not in Fedora repo per license change, using rhel8 upstream
   # - mongodb
   - mongodb-org
+  - nginx
 
 fact_binwalk_pkgs:
   - xorg-x11-server-Xvfb
