--- a/vars/Fedora.yml
+++ b/vars/Fedora.yml
@@ -11,6 +11,7 @@ fact_pkgs:
   - automake
   - autoconf
   - cmake
+  - gcc-c++
   - libtool
   - file-devel
   - libffi-devel
@@ -21,6 +22,8 @@ fact_pkgs:
   - unzip
   - clamav
   - clamav-update
+  # semanage
+  - policycoreutils-python-utils
   # Not in Fedora repo per license change, using rhel8 upstream
   # - mongodb
   - mongodb-org
