--- a/tasks/fact.yml
+++ b/tasks/fact.yml
@@ -145,6 +145,31 @@
     regexp: lief==0.10.1
     replace: lief==0.11.5
     mode: '0644'
+  when: fact_version != 'HEAD'
+
+- name: Fedora 35+ | Remove setuptools requirements - conflicts with rpm
+  lineinfile:
+    dest: "{{ fact_root }}/src/install/requirements_common.txt"
+    regexp: '^setuptools'
+    state: absent
+    mode: '0644'
+  when: ansible_distribution == 'Fedora' and ansible_distribution_major_version|int >= 35
+
+- import_tasks: lief.yml
+
+- name: FACT pre-install | pip dependencies requirements_common
+  pip:
+    requirements: "{{ fact_root }}/src/install/requirements_common.txt"
+    executable: pip3
+    extra_args: --upgrade --prefer-binary
+
+- name: Fedora | Use systemctl for nginx restart
+  lineinfile:
+    dest: "{{ fact_root }}/src/install/frontend.py"
+    regexp: "^    nginx_output, nginx_code = execute_shell_command_get_return_code.'sudo (.*)'.$"
+    line: "    nginx_output, nginx_code = execute_shell_command_get_return_code('sudo systemctl restart nginx')"
+    mode: '0644'
+  when: ansible_distribution == 'Fedora'
 
 - name: FACT install - python way
   shell: |
