pin pymongo<4 - FACT_core#708

--- a/tasks/fact.yml
+++ b/tasks/fact.yml
@@ -75,6 +75,7 @@
       - python-magic
       - requests
       - docker
+      - pymongo<4
       - git+https://github.com/fkie-cad/common_helper_files.git
       - git+https://github.com/fkie-cad/common_helper_process.git
     executable: pip3
