--- a/.github/workflows/default-kitchen.yml
+++ b/.github/workflows/default-kitchen.yml
@@ -26,7 +26,7 @@ jobs:
             version: '20.04'
             version2: 2004
             suite: default
-            experimental: false
+            experimental: true
           - distribution: ubuntu
             version: '18.04'
             version2: 1804
@@ -53,7 +53,7 @@ jobs:
           pip3 show ansible
           ansible --version
           cd $GITHUB_WORKSPACE/juju4.fact
-          [ -f get-dependencies.sh ] && sh -x get-dependencies.sh
+          ansible-galaxy install -r molecule/default/requirements.yml
           { echo '[defaults]'; echo 'callback_whitelist = profile_tasks, timer'; echo 'roles_path = ../'; echo 'ansible_python_interpreter: /usr/bin/python3'; } >> ansible.cfg
           { echo '[facthosts]'; echo 'localhost'; } >> inventory
           cat inventory
