--- a/.github/workflows/default-HEAD-kitchen.yml
+++ b/.github/workflows/default-HEAD-kitchen.yml
@@ -28,15 +28,15 @@ jobs:
             suite: default-HEAD
             experimental: true
           - distribution: ubuntu
+            version: '22.04'
+            version2: 2204
+            suite: default-HEAD
+            experimental: false
+          - distribution: ubuntu
             version: '20.04'
             version2: 2004
             suite: default-HEAD
             experimental: false
-          - distribution: ubuntu
-            version: '18.04'
-            version2: 1804
-            suite: default-HEAD
-            experimental: true
     env:
       ANSIBLE_CALLBACKS_ENABLED: profile_tasks
       # ANSIBLE_EXTRA_FLAGS: "-e fact_nginx_shim=true -e fact_version=HEAD"
