--- a/.github/workflows/default-kitchen.yml
+++ b/.github/workflows/default-kitchen.yml
@@ -23,15 +23,15 @@ jobs:
             suite: default
             experimental: true
           - distribution: ubuntu
-            version: '20.04'
-            version2: 2004
+            version: '22.04'
+            version2: 2204
             suite: default
             experimental: true
           - distribution: ubuntu
-            version: '18.04'
-            version2: 1804
+            version: '20.04'
+            version2: 2004
             suite: default
-            experimental: true
+            experimental: false
     env:
       ANSIBLE_CALLBACKS_ENABLED: profile_tasks
       ANSIBLE_EXTRA_FLAGS: "-e fact_nginx_shim=true"
