--- a/tasks/mongodb-thp.yml
+++ b/tasks/mongodb-thp.yml
@@ -2,9 +2,11 @@
 # https://docs.mongodb.com/manual/tutorial/transparent-huge-pages/#transparent-huge-pages-thp-settings
 # https://askubuntu.com/questions/597372/how-do-i-modify-sys-kernel-mm-transparent-hugepage-enabled
 
-- name: Ensure package sysfsutils is present
+- name: Ensure packages mongodb and sysfsutils are present
   package:
-    name: sysfsutils
+    name:
+      - mongodb
+      - sysfsutils
     state: present
 
 - name: Set transparent_hugepage
