--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -15,6 +15,7 @@
         ansible_python_interpreter: /usr/bin/python3
       when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version|int == 18)
   roles:
+    - { role: geerlingguy.postgresql, when: fact_version is regex('^4\.') or fact_version == 'HEAD' }
     - juju4.fact
 
 - name: Verify playbook
